// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarZoomModal - Snapshots > matches snapshot when closed 1`] = `null`;

exports[`AvatarZoomModal - Snapshots > matches snapshot when open with avatar image 1`] = `
<div
  aria-label="John Doe's avatar enlarged"
  aria-modal="true"
  class="fixed inset-0 z-50 flex animate-in items-center justify-center bg-black/60 duration-300 outline-none fade-in"
  data-testid="avatar-zoom-modal-overlay"
  role="dialog"
  tabindex="-1"
>
  <div
    class="relative animate-in rounded-full shadow-2xl duration-300 ease-in-out zoom-in-95 fade-in"
    data-testid="avatar-zoom-modal-content"
  >
    <div
      class="size-(--avatar-zoom-size) transition-transform hover:scale-105"
      data-testid="avatar"
    >
      <img
        alt="John Doe's avatar"
        data-testid="avatar-image"
        src="https://example.com/avatar.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`AvatarZoomModal - Snapshots > matches snapshot when open with fallback initials 1`] = `
<div
  aria-label="Jane Smith's avatar enlarged"
  aria-modal="true"
  class="fixed inset-0 z-50 flex animate-in items-center justify-center bg-black/60 duration-300 outline-none fade-in"
  data-testid="avatar-zoom-modal-overlay"
  role="dialog"
  tabindex="-1"
>
  <div
    class="relative animate-in rounded-full shadow-2xl duration-300 ease-in-out zoom-in-95 fade-in"
    data-testid="avatar-zoom-modal-content"
  >
    <div
      class="size-(--avatar-zoom-size) transition-transform hover:scale-105"
      data-testid="avatar"
    >
      <div
        data-testid="avatar-fallback"
      >
        JS
      </div>
    </div>
  </div>
</div>
`;
